--- a/mvcapp/Views/Home/Index.cshtml
+++ b/mvcapp/Views/Home/Index.cshtml
@@ -14,3 +14,5 @@
 <pre>
     .UseKestrel(options => options.Listen(IPAddress.Loopback, 5000)) убираем
 </pre>
+
+<a href="https://localhost:5501/Home/Cookies">Cookies</a>
